# Kairos

./: .env.example  .gitignore  README.md  SOURCES.md  SPEC.md  pyproject.toml
deploy/: README.md  bootstrap.sh  deadman.sh  digest.sh  prune.sh  slack.sh  smoke-test.sh  sudoers-kairos-heal
deploy/systemd/: kairos-collect.service  kairos-deadman.service  kairos-deadman.timer  kairos-digest.service  kairos-digest.timer  kairos-prune.service  kairos-prune.timer  kairos-stream.service
kairos/: __init__.py  backtest.py  basis.py  carry.py  cli.py  collect.py  config.py  convergence.py  crossvenue.py  fees.py  funding.py  metrics.py  model.py  reference.py  report.py  synth.py
kairos/data/: __init__.py  kalshi.py  kalshi_ws.py  offshore.py  store.py
scripts/: get_funding.py  kairos-collect.service  kairos.cron
tests/: test_backtest.py  test_basis.py  test_carry.py  test_collect.py  test_crossvenue.py  test_fees.py  test_funding.py  test_kalshi.py  test_metrics.py  test_offshore.py  test_report.py  test_store.py  test_store_widen.py  test_ws.py
